Add xl responsive design

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
   <div class="flex items-center flex-col px-5 sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
     <main class="flex flex-col items-start w-full" role="main">
       <!-- INTRODUCTION section -->
-      <section id="home" class="relative w-full h-screen flex flex-col items-start justify-center">
-        <h1 class="text-3xl md:text-4xl font-semibold ">Daniel Moderiano</h1>
-        <p class="text-2xl md:text-3xl">Full stack web developer</p>
+      <section id="home" class="relative w-full h-screen xl:h-auto flex flex-col items-start justify-center xl:mb-20">
+        <h1 class="text-3xl md:text-4xl xl:text-5xl xl:pb-1 font-semibold xl:mt-48">Daniel Moderiano</h1>
+        <p class="text-2xl md:text-3xl xl:text-4xl">Full stack web developer</p>
 
         <ul class="flex items-center justify-start mt-4" role="menubar">
           <li role="none" class="mr-4 md:mr-5">
@@ -67,7 +67,7 @@
             </a>
           </li>
           <li role="none" class="mr-3">
-            <a href="#" class="underline text-lg flex items-center justify-center font-semibold sm:text-xl"
+            <a href="#" class="underline text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl"
               target="_blank" rel="no-referrer">
               Resume
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5">
@@ -80,7 +80,7 @@
         </ul>
 
         <div id="seework"
-          class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300">
+          class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300 xl:hidden">
           <p class="text-[19px] md:text-[22px]">See my work</p>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="w-5 -mt-1">
             <path
