Remove h-full setup for home section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body class="relative text-gray-800">
 
   <header role="banner"
-    class="px-2 py-3 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
+    class="px-2 py-3 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] xl:text-[20px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
     <div class="xl:max-w-6xl xl:flex items-center justify-between mx-auto">
-      <button class="hidden xl:block text-lg font-medium">
+      <button class="hidden xl:block text-lg xl:text-[20px] font-medium">
         DM
       </button>
       <nav id="mainmenu" role="navigation" aria-label="Main menu">
@@ -43,8 +43,8 @@
   <div class="flex items-center flex-col px-5 sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
     <main class="flex flex-col items-start w-full" role="main">
       <!-- INTRODUCTION section -->
-      <section id="home" class="relative w-full h-screen xl:h-auto flex flex-col items-start justify-center xl:mb-20">
-        <h1 class="text-3xl md:text-4xl xl:text-5xl xl:pb-1 font-semibold xl:mt-48">Daniel Moderiano</h1>
+      <section id="home" class="relative w-full h-auto flex flex-col items-start justify-center lg:mb-20">
+        <h1 class="text-4xl xl:text-5xl xl:pb-1 font-semibold mt-24 md:mt-32 lg:mt-48">Daniel Moderiano</h1>
         <p class="text-2xl md:text-3xl xl:text-4xl">Full stack web developer</p>
 
         <ul class="flex items-center justify-start mt-4" role="menubar">
@@ -70,7 +70,7 @@
             <a href="#" class="underline text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl"
               target="_blank" rel="no-referrer">
               Resume
-              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5 xl:w-4">
                 <path
                   d="M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z" />
               </svg>
@@ -79,14 +79,14 @@
           </li>
         </ul>
 
-        <div id="seework"
-          class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300 xl:hidden">
+        <!-- <div id="seework"
+          class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300 lg:hidden">
           <p class="text-[19px] md:text-[22px]">See my work</p>
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="w-5 -mt-1">
             <path
               d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z" />
           </svg>
-        </div>
+        </div> -->
       </section>
 
       <!-- PROJECTS section -->
@@ -99,7 +99,7 @@
         <article class="flex flex-col xl:flex-row">
           <img src="./src/assets/images/optomrx-small.png" alt="optomrx web app dashboard" class="shadow-md rounded-lg xl:max-w-2xl">
           <div class="xl:flex xl:flex-col xl:ml-8">
-            <h3 class="text-2xl font-semibold mt-2">OptomRx</h3>
+            <h3 class="text-2xl font-semibold mt-4">OptomRx</h3>
 
             <!-- Tech stack -->
             <div class="mb-4">
@@ -128,7 +128,7 @@
           <img src="./src/assets/images/odinbook-small.png" alt="odinbook web app profile page"
             class="shadow-md rounded-lg xl:max-w-2xl">
           <div class="xl:flex xl:flex-col xl:ml-8">
-            <h3 class="text-2xl font-semibold mt-2">Odinbook</h3>
+            <h3 class="text-2xl font-semibold mt-4">Odinbook</h3>
 
             <!-- Tech stack -->
             <div class="mb-4">
