--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 <body class="relative text-gray-800">
 
   <header role="banner"
-    class="px-2 py-3 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] xl:text-[20px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
-    <div class="xl:max-w-6xl xl:flex items-center justify-between mx-auto">
-      <button class="hidden xl:block text-lg xl:text-[20px] font-medium">
+    class="px-2 py-3 md:px-0 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] xl:text-[20px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
+    <div class="md:flex items-center justify-between sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
+      <button class="hidden md:block text-lg xl:text-[20px] font-medium">
         DM
       </button>
       <nav id="mainmenu" role="navigation" aria-label="Main menu">
         <ul class="flex items-center justify-evenly" role="menubar">
-          <li class="px-2 xl:px-4" role="none">
-            <a class="decoration-gray-600 decoration-from-font font-semibold underline-offset-4" href="#home"
+          <li class="pr-2 md:pr-3 xl:pr-4" role="none">
+            <a class="hover:underline" href="#home"
               role="menuitem">Home</a>
           </li>
-          <li class="px-2 xl:px-4" role="none">
-            <a class="hover:underline text" href="#projects" role="menuitem">Projects</a>
+          <li class="px-2 md:px-3 xl:px-4" role="none">
+            <a class="hover:underline" href="#projects" role="menuitem">Projects</a>
           </li>
-          <li class="px-2 xl:px-4" role="none">
-            <a class="hover:underline text" href="#skills" role="menuitem">Skills</a>
+          <li class="px-2 md:px-3 xl:px-4" role="none">
+            <a class="hover:underline" href="#skills" role="menuitem">Skills</a>
           </li>
-          <li class="px-2 xl:pl-4" role="none">
-            <a class="hover:underline text" href="#contact" role="menuitem">Contact</a>
+          <li class="pl-2 md:pl-3 xl:pl-4" role="none">
+            <a class="hover:underline" href="#contact" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -43,7 +43,7 @@
   <div class="flex items-center flex-col px-5 sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
     <main class="flex flex-col items-start w-full" role="main">
       <!-- INTRODUCTION section -->
-      <section id="home" class="relative w-full h-auto flex flex-col items-start justify-center lg:mb-20">
+      <section id="home" class="relative w-full h-auto flex flex-col items-start justify-center lg:mb-16">
         <h1 class="text-4xl xl:text-5xl xl:pb-1 font-semibold mt-24 md:mt-32 lg:mt-48">Daniel Moderiano</h1>
         <p class="text-2xl md:text-3xl xl:text-4xl">Full stack web developer</p>
 
@@ -78,15 +78,6 @@
             </a>
           </li>
         </ul>
-
-        <!-- <div id="seework"
-          class="absolute bottom-0 flex flex-col items-center justify-center w-full text-center opacity-0 transition-all duration-300 lg:hidden">
-          <p class="text-[19px] md:text-[22px]">See my work</p>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" class="w-5 -mt-1">
-            <path
-              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z" />
-          </svg>
-        </div> -->
       </section>
 
       <!-- PROJECTS section -->
