--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
   <header role="banner"
     class="px-2 py-3 md:px-0 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] xl:text-[20px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
     <div class="md:flex items-center justify-between sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
-      <button class="hidden md:block text-lg xl:text-[20px] font-medium">
+      <button class="hidden md:block text-lg xl:text-[20px] font-medium text-sky-700">
         DM
       </button>
       <nav id="mainmenu" role="navigation" aria-label="Main menu">
         <ul class="flex items-center justify-evenly" role="menubar">
           <li class="pr-2 md:pr-3 xl:pr-4" role="none">
-            <a class="hover:underline" href="#home"
+            <a class="hover:underline underline-offset-2 decoration-2 decoration-sky-800" href="#home"
               role="menuitem">Home</a>
           </li>
           <li class="px-2 md:px-3 xl:px-4" role="none">
-            <a class="hover:underline" href="#projects" role="menuitem">Projects</a>
+            <a class="hover:underline underline-offset-2 decoration-2 decoration-sky-800" href="#projects" role="menuitem">Projects</a>
           </li>
           <li class="px-2 md:px-3 xl:px-4" role="none">
-            <a class="hover:underline" href="#skills" role="menuitem">Skills</a>
+            <a class="hover:underline underline-offset-2 decoration-2 decoration-sky-800" href="#skills" role="menuitem">Skills</a>
           </li>
           <li class="pl-2 md:pl-3 xl:pl-4" role="none">
-            <a class="hover:underline" href="#contact" role="menuitem">Contact</a>
+            <a class="hover:underline underline-offset-2 decoration-2 decoration-sky-800" href="#contact" role="menuitem">Contact</a>
           </li>
         </ul>
       </nav>
@@ -44,14 +44,14 @@
     <main class="flex flex-col items-start w-full" role="main">
       <!-- INTRODUCTION section -->
       <section id="home" class="relative w-full h-auto flex flex-col items-start justify-center lg:mb-16">
-        <h1 class="text-4xl xl:text-5xl xl:pb-1 font-semibold mt-24 md:mt-32 lg:mt-48">Daniel Moderiano</h1>
-        <p class="text-2xl md:text-3xl xl:text-4xl">Full stack web developer</p>
+        <h1 class="text-4xl xl:text-5xl xl:pb-1 font-semibold mt-32 lg:mt-48">Daniel Moderiano</h1>
+        <p class="text-2xl md:text-3xl xl:text-4xl ">Full stack web developer</p>
 
         <ul class="flex items-center justify-start mt-4" role="menubar">
           <li role="none" class="mr-4 md:mr-5">
             <a href="https://github.com/daniel-moderiano" role="menuitem">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" class="w-7 md:w-9">
-                <path
+                <path fill="#075985"
                   d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z" />
               </svg>
               <span class="sr-only">GitHub profile</span>
@@ -60,18 +60,18 @@
           <li role="none" class="mr-4 md:mr-5">
             <a href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/" role="menuitem">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-7 md:w-9">
-                <path
+                <path fill="#075985"
                   d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" />
               </svg>
               <span class="sr-only">LinkedIn Profile</span>
             </a>
           </li>
           <li role="none" class="mr-3">
-            <a href="#" class="underline text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl"
+            <a href="#" class="underline text-sky-700 text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl"
               target="_blank" rel="no-referrer">
               Resume
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5 xl:w-4">
-                <path
+                <path fill="#075985"
                   d="M384 320c-17.67 0-32 14.33-32 32v96H64V160h96c17.67 0 32-14.32 32-32s-14.33-32-32-32L64 96c-35.35 0-64 28.65-64 64V448c0 35.34 28.65 64 64 64h288c35.35 0 64-28.66 64-64v-96C416 334.3 401.7 320 384 320zM488 0H352c-12.94 0-24.62 7.797-29.56 19.75c-4.969 11.97-2.219 25.72 6.938 34.88L370.8 96L169.4 297.4c-12.5 12.5-12.5 32.75 0 45.25C175.6 348.9 183.8 352 192 352s16.38-3.125 22.62-9.375L416 141.3l41.38 41.38c9.156 9.141 22.88 11.84 34.88 6.938C504.2 184.6 512 172.9 512 160V24C512 10.74 501.3 0 488 0z" />
               </svg>
               <span class="sr-only">(opens in a new tab)</span>
@@ -98,16 +98,16 @@
             </div>
 
             <!-- Description -->
-            <p class="mb-4">OptomRx is an industry-first web app for Australian optometrists to create and manage
+            <p class="mb-5">OptomRx is an industry-first web app for Australian optometrists to create and manage
               professional therapeutic prescriptions online. Currently integrated into several optometry practices
               across
               the country; OptomRx sees daily use in clinical practice.</p>
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
-              <a class="block hover:no-underline mr-6 text-gray-800 text-lg underline"
+              <a class="block hover:no-underline mr-6 p-2 px-4 bg-sky-700 rounded-full text-gray-50 text-base font-semibold hover:bg-sky-900 active:scale-[0.98] transition-all"
                 href="https://github.com/daniel-moderiano/optom-rx">View code</a>
-              <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline" href="https://optomrx.net/">Visit
+              <a class="block hover:no-underline mr-6 p-2 px-4 bg-sky-700 rounded-full text-gray-50 text-base font-semibold hover:bg-sky-900 active:scale-[0.98] transition-all" href="https://optomrx.net/">Visit
                 website</a>
             </div>
           </div>
@@ -127,7 +127,7 @@
             </div>
 
             <!-- Description -->
-            <p class="mb-4">Odinbook is a Facebook-esque social media website with the ability to create profiles, make
+            <p class="mb-5">Odinbook is a Facebook-esque social media website with the ability to create profiles, make
               posts and
               comments, and grow your friend network. Key features include image uploads, log in with Facebook,
               responsive
@@ -135,9 +135,9 @@
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
-              <a class="block hover:no-underline mr-6 text-gray-800 text-lg underline"
+              <a class="block hover:no-underline mr-6 p-2 px-4 bg-sky-700 rounded-full text-gray-50 text-base font-semibold hover:bg-sky-900 active:scale-[0.98] transition-all"
                 href="https://github.com/daniel-moderiano/odinbook">View code</a>
-              <a class="block hover:no-underline mr-4 text-gray-800 text-lg underline"
+              <a class="block hover:no-underline mr-6 p-2 px-4 bg-sky-700 rounded-full text-gray-50 text-base font-semibold hover:bg-sky-900 active:scale-[0.98] transition-all"
                 href="https://odinbook-dm.herokuapp.com/">Visit website</a>
             </div>
           </div>
@@ -373,7 +373,7 @@
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
               name="message" id="message" cols="30" rows="6" required></textarea>
           </label>
-          <button class="rounded-md py-2 px-4 bg-slate-600 text-white font-semibold">Send message</button>
+          <button class="p-2 px-4 bg-sky-700 rounded-full text-gray-50 text-base font-semibold">Send message</button>
         </form>
       </section>
 
