--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body class="relative text-gray-800">
 
   <header role="banner"
-    class="px-2 py-3 md:px-0 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] sm:text-[18px] xl:text-[20px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
+    class="px-2 py-3 md:px-0 text-gray-800 shadow-sm fixed top-0 left-0 w-full font-light text-[17px] xl:text-[19px] bg-white/90 backdrop-blur-sm transition-all duration-300 z-10">
     <div class="md:flex items-center justify-between sm:px-12 md:px-16 mx-auto max-w-4xl xl:max-w-7xl">
-      <button class="hidden md:block text-lg xl:text-[20px] font-medium">
+      <a href="#home" class="hidden md:block text-lg xl:text-[22px] font-medium">
         DM
-      </button>
+      </a>
       <nav id="mainmenu" role="navigation" aria-label="Main menu">
         <ul class="flex items-center justify-evenly" role="menubar">
           <li class="pr-2 md:pr-3 xl:pr-4" role="none">
@@ -358,29 +358,29 @@
             target="_blank" rel="no-referrer">LinkedIn</a>
           or <a class="underline hover:no-underline" href="mailto:daniel.moderiano@outlook.com">email</a>.</p>
 
-        <form class="mt-6 flex flex-col items-start justify-start w-full">
+        <form class="mt-6 flex flex-col items-start justify-start w-full" name="contact" method="POST" data-netlify="true">
           <label for="name" class="mb-5 w-full max-w-sm">
             Name
             <span class="text-red-600">*</span>
             <input
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
-              type="text" required>
+              type="text" required name="name">
           </label>
           <label for="email" class="mb-5 w-full max-w-sm">
             Email
             <span class="text-red-600">*</span>
             <input
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
-              type="email" required>
+              type="email" required name="email">
           </label>
           <label for="message" class="mb-5 w-full max-w-sm">
             Message
             <span class="text-red-600">*</span>
             <textarea
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
-              name="message" id="message" cols="30" rows="6" required></textarea>
+              name="message" id="message" cols="30" rows="6" required name="message"></textarea>
           </label>
-          <button class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700">Send
+          <button type="submit" class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700">Send
             message</button>
         </form>
       </section>
