--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <span class="text-red-600">*</span>
             <textarea
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
-              name="message" id="message" cols="30" rows="6" required name="message"></textarea>
+              name="message" id="message" cols="30" rows="6" required></textarea>
           </label>
           <button type="submit" class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700">Send
             message</button>
