Switch project links back to underlined text

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
-              <a class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700 mr-5"
+              <a class="text-lg underline hover:no-underline mr-5"
                 href="https://github.com/daniel-moderiano/optom-rx" target="_blank" rel="no-referrer">View code</a>
-              <a class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700" href="https://optomrx.net/"
+              <a class="text-lg underline hover:no-underline" href="https://optomrx.net/"
                 target="_blank" rel="no-referrer">Visit
                 website</a>
             </div>
@@ -142,9 +142,9 @@
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
-              <a class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700 mr-5"
+              <a class="text-lg underline hover:no-underline mr-5"
                 href="https://github.com/daniel-moderiano/odinbook" target="_blank" rel="no-referrer">View code</a>
-              <a class="rounded-full py-2 px-4 bg-slate-600 text-white font-medium hover:bg-slate-700"
+              <a class="text-lg underline hover:no-underline"
                 href="https://odinbook-dm.herokuapp.com/" target="_blank" rel="no-referrer">Visit website</a>
             </div>
           </div>
