Remove custom form submission page

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
           or <a class="underline hover:no-underline" href="mailto:daniel.moderiano@outlook.com">email</a>.</p>
 
         <form class="mt-6 flex flex-col items-start justify-start w-full" name="contact" method="POST"
-          data-netlify="true" action="/src/pages/success.html">
+          data-netlify="true">
           <label for="name" class="mb-5 w-full max-w-sm">
             Name
             <span class="text-red-600">*</span>
