Add rel='noopener noreferrer to all target='_blank' links for security purposes'

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <ul class="flex items-center justify-start mt-4" role="menubar">
           <li role="none" class="mr-4 md:mr-5">
-            <a href="https://github.com/daniel-moderiano" role="menuitem" target="_blank" rel="no-referrer">
+            <a href="https://github.com/daniel-moderiano" role="menuitem" target="_blank" rel="noopener noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
                 class="w-7 md:w-9 opacity-90 hover:opacity-100">
                 <path fill="#1F2937"
@@ -63,7 +63,7 @@
           </li>
           <li role="none" class="mr-4 md:mr-5">
             <a href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/" role="menuitem" target="_blank"
-              rel="no-referrer">
+            rel="noopener noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                 class="w-7 md:w-9 opacity-90 hover:opacity-100">
                 <path fill="#1F2937"
@@ -75,7 +75,7 @@
           <li role="none" class="mr-3">
             <a href="#"
               class="underline hover:no-underline text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl text-gray-800"
-              target="_blank" rel="no-referrer">
+              target="_blank" rel="noopener noreferrer">
               Resume
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-3 ml-1 mt-0.5 xl:w-4">
                 <path fill="#1F2937"
@@ -114,9 +114,9 @@
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/optom-rx"
-                target="_blank" rel="no-referrer">View code</a>
+                target="_blank" rel="noopener noreferrer">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://optomrx.net/" target="_blank"
-                rel="no-referrer">Visit
+              rel="noopener noreferrer">Visit
                 website</a>
             </div>
           </div>
@@ -145,9 +145,9 @@
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/odinbook"
-                target="_blank" rel="no-referrer">View code</a>
+                target="_blank" rel="noopener noreferrer">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://odinbook-dm.herokuapp.com/" target="_blank"
-                rel="no-referrer">Visit website</a>
+              rel="noopener noreferrer">Visit website</a>
             </div>
           </div>
 
@@ -357,7 +357,7 @@
         </h2>
         <p>If you'd like to reach me, please fill out the form below. You can also reach me via <a
             class="underline hover:no-underline" href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/"
-            target="_blank" rel="no-referrer">LinkedIn</a>
+            target="_blank" rel="noopener noreferrer">LinkedIn</a>
           or <a class="underline hover:no-underline" href="mailto:daniel.moderiano@outlook.com">email</a>.</p>
 
         <form class="mt-6 flex flex-col items-start justify-start w-full" name="contact" method="POST"
