Add Content Security Policy (CSP)
CSP includes as strict as possible directives, with the only
allowable assets being fonts served by google, and unsafe-inline
styles per Tailwind

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy"
+      content="default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; font-src fonts.gstatic.com;style-src 'unsafe-inline' fonts.googleapis.com; base-uri 'self'; form-action 'self';">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -63,7 +65,7 @@
           </li>
           <li role="none" class="mr-4 md:mr-5">
             <a href="https://www.linkedin.com/in/daniel-moderiano-2a0429a9/" role="menuitem" target="_blank"
-            rel="noopener noreferrer">
+              rel="noopener noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                 class="w-7 md:w-9 opacity-90 hover:opacity-100">
                 <path fill="#1F2937"
@@ -116,7 +118,7 @@
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/optom-rx"
                 target="_blank" rel="noopener noreferrer">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://optomrx.net/" target="_blank"
-              rel="noopener noreferrer">Visit
+                rel="noopener noreferrer">Visit
                 website</a>
             </div>
           </div>
@@ -147,7 +149,7 @@
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/odinbook"
                 target="_blank" rel="noopener noreferrer">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://odinbook-dm.herokuapp.com/" target="_blank"
-              rel="noopener noreferrer">Visit website</a>
+                rel="noopener noreferrer">Visit website</a>
             </div>
           </div>
 
