--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/optom-rx"
-                target="_blank" rel="noopener noreferrer">View code</a>
+                target="_blank" rel="noopener noreferrer" aria-label="View code for OptomRx">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://optomrx.net/" target="_blank"
-                rel="noopener noreferrer">Visit
+                rel="noopener noreferrer" aria-label="Visit OptomRx website">Visit
                 website</a>
             </div>
           </div>
@@ -145,9 +145,9 @@
             <!-- Project links -->
             <div class="flex items-center justify-start mb-6">
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/odinbook"
-                target="_blank" rel="noopener noreferrer">View code</a>
+                target="_blank" rel="noopener noreferrer" aria-label="View code for Odinbook">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://odinbook-dm.herokuapp.com/" target="_blank"
-                rel="noopener noreferrer">Visit website</a>
+                rel="noopener noreferrer" aria-label="Visit Odinbook website">Visit website</a>
             </div>
           </div>
 
