Add warning for Heroku load time when visiting odinbook app

--- a/index.html
+++ b/index.html
@@ -144,14 +144,16 @@
               comments, and grow your friend network. Key features include image uploads, log in with Facebook,
               responsive
               design, and AI-assisted accessiblity.</p>
+      
 
             <!-- Project links -->
-            <div class="flex items-center justify-start mb-6">
+            <div class="flex items-center justify-start mb-5">
               <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/odinbook"
                 target="_blank" rel="noopener noreferrer" aria-label="View code for Odinbook">View code</a>
               <a class="text-lg underline hover:no-underline" href="https://odinbook-dm.herokuapp.com/" target="_blank"
-                rel="noopener noreferrer" aria-label="Visit Odinbook website">Visit website</a>
+                rel="noopener noreferrer" aria-label="Visit Odinbook website">Visit website*</a>
             </div>
+            <p class="text-gray-700 text-sm mb-2">*Odinbook is hosted on Heroku, so please allow up to 30 seconds for the live website to load.</p>
           </div>
 
         </article>
