--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- INTRODUCTION section -->
       <section id="home" class="relative w-full h-auto flex flex-col items-start justify-center lg:mb-16">
         <h1 class="text-4xl xl:text-5xl xl:pb-1 font-semibold mt-32 lg:mt-48">Daniel Moderiano</h1>
-        <p class="text-2xl md:text-3xl xl:text-4xl">Full stack web developer</p>
+        <p class="text-2xl md:text-3xl xl:text-4xl">Full-Stack Developer</p>
 
         <ul class="flex items-center justify-start mt-4">
           <li class="mr-4 md:mr-5">
