--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </a>
           </li>
           <li class="mr-3">
-            <a href="public/resume.pdf"
+            <a href="./resume.pdf"
               class="underline hover:no-underline text-lg flex items-center justify-center font-semibold sm:text-xl xl:text-2xl text-gray-800"
               target="_blank" rel="noopener noreferrer">
               Resume
