--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
 
         <section class="my-3 md:mt-5">
           <h3 class="font-light uppercase text-sm sm:text-base border-b mb-3 md:mb-4 w-32">Frontend</h3>
-          <ul class="flex flex-wrap">
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mr-3 -ml-6">
+          <ul class="flex flex-wrap pl-6 -mr-8">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-8 h-8" aria-hidden="true">
                 <path fill="#E34F26" d="M71,460 L30,0 481,0 440,460 255,512" />
                 <path fill="#EF652A" d="M256,472 L405,431 440,37 256,37" />
@@ -185,7 +185,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">HTML</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="w-8 h-8" aria-hidden="true">
                 <path fill="#264de4" d="M71.357 460.819L30.272 0h451.456l-41.129 460.746L255.724 512z" />
                 <path fill="#2965f1" d="M405.388 431.408l35.148-393.73H256v435.146z" />
@@ -197,7 +197,7 @@
 
               <span class="text-xs md:text-sm mt-1">CSS</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 630 630" class="w-8 h-8" aria-hidden="true">
                 <rect width="630" height="630" fill="#f7df1e" />
                 <path
@@ -205,7 +205,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">JavaScript</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 29.43 29.43" class="w-8 h-8" aria-hidden="true">
                 <circle cx="14.71" cy="14.71" r="14.71" fill="#1f252d" />
                 <circle cx="14.71" cy="14.71" r="2.05" fill="#70cff0" />
@@ -217,7 +217,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">React</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg viewBox="0 0 1000 1000" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8"
                 aria-hidden="true">
                 <path
@@ -229,7 +229,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">Tailwind</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 774 875.7" class="w-8 h-8" aria-hidden="true">
                 <path fill="#FFF" d="M387 0l387 218.9v437.9L387 875.7 0 656.8V218.9z" />
                 <path fill="#8ed6fb"
@@ -244,15 +244,15 @@
 
         <section class="my-3 md:mt-5">
           <h3 class="font-light uppercase text-sm md:text-base border-b mb-3 md:mb-4 w-32">Backend</h3>
-          <ul class="flex gap-x-6 md:gap-x-8">
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mr-3 -ml-6">
+          <ul class="flex flex-wrap pl-6 -mr-8">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="w-8 h-8" aria-hidden="true">
                 <path fill="#689F63"
                   d="M224 508c-6.7 0-13.5-1.8-19.4-5.2l-61.7-36.5c-9.2-5.2-4.7-7-1.7-8 12.3-4.3 14.8-5.2 27.9-12.7 1.4-.8 3.2-.5 4.6.4l47.4 28.1c1.7 1 4.1 1 5.7 0l184.7-106.6c1.7-1 2.8-3 2.8-5V149.3c0-2.1-1.1-4-2.9-5.1L226.8 37.7c-1.7-1-4-1-5.7 0L36.6 144.3c-1.8 1-2.9 3-2.9 5.1v213.1c0 2 1.1 4 2.9 4.9l50.6 29.2c27.5 13.7 44.3-2.4 44.3-18.7V167.5c0-3 2.4-5.3 5.4-5.3h23.4c2.9 0 5.4 2.3 5.4 5.3V378c0 36.6-20 57.6-54.7 57.6-10.7 0-19.1 0-42.5-11.6l-48.4-27.9C8.1 389.2.7 376.3.7 362.4V149.3c0-13.8 7.4-26.8 19.4-33.7L204.6 9c11.7-6.6 27.2-6.6 38.8 0l184.7 106.7c12 6.9 19.4 19.8 19.4 33.7v213.1c0 13.8-7.4 26.7-19.4 33.7L243.4 502.8c-5.9 3.4-12.6 5.2-19.4 5.2zm149.1-210.1c0-39.9-27-50.5-83.7-58-57.4-7.6-63.2-11.5-63.2-24.9 0-11.1 4.9-25.9 47.4-25.9 37.9 0 51.9 8.2 57.7 33.8.5 2.4 2.7 4.2 5.2 4.2h24c1.5 0 2.9-.6 3.9-1.7s1.5-2.6 1.4-4.1c-3.7-44.1-33-64.6-92.2-64.6-52.7 0-84.1 22.2-84.1 59.5 0 40.4 31.3 51.6 81.8 56.6 60.5 5.9 65.2 14.8 65.2 26.7 0 20.6-16.6 29.4-55.5 29.4-48.9 0-59.6-12.3-63.2-36.6-.4-2.6-2.6-4.5-5.3-4.5h-23.9c-3 0-5.3 2.4-5.3 5.3 0 31.1 16.9 68.2 97.8 68.2 58.4-.1 92-23.2 92-63.4z" />
               </svg>
               <span class="text-xs md:text-sm mt-1">Node.js</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg viewBox="0 0 52 30" fill="none" xmlns="http://www.w3.org/2000/svg" class="w-8 h-8"
                 aria-hidden="true">
                 <path
@@ -261,7 +261,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">Express</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 67" fill="#fff" fill-rule="evenodd" stroke="#000"
                 stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8" aria-hidden="true">
                 <g stroke="none" fill-rule="nonzero">
@@ -278,7 +278,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">MongoDB</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 192 192" class="w-8 h-8" aria-hidden="true">
                 <defs>
                   <linearGradient id="d" x1="-108.63" y1="-692.24" x2="-58.56" y2="-742.31"
@@ -328,8 +328,8 @@
 
         <section class="mt-3 md:mt-5">
           <h3 class="font-light uppercase text-sm md:text-base border-b mb-3 md:mb-4 w-32">General</h3>
-          <ul class="flex gap-x-6 md:gap-x-8">
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mr-3 -ml-6">
+          <ul class="flex flex-wrap pl-6 -mr-8">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 97 97"
                 enable-background="new 0 0 97 97" xml:space="preserve" class="w-8 h-8" aria-hidden="true">
@@ -345,7 +345,7 @@
               </svg>
               <span class="text-xs md:text-sm mt-1">Git</span>
             </li>
-            <li class="flex flex-col items-center justify-center w-12 h-16 px-12 -mx-3">
+            <li class="flex flex-col items-center justify-center w-12 h-16 pr-[68px] md:pr-[74px]">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 66" fill="#fff" fill-rule="evenodd" stroke="#000"
                 stroke-linecap="round" stroke-linejoin="round" class="w-8 h-8" aria-hidden="true">
                 <path
