--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <!-- OPTOMRX -->
         <article class="flex flex-col xl:flex-row">
           <img src="./src/assets/images/optomrx-small.png" alt="optomrx web app dashboard"
-            class="shadow-md rounded-lg xl:max-w-2xl">
+            class="shadow-md rounded-lg xl:max-w-2xl xl:max-h-[389px]">
           <div class="xl:flex xl:flex-col xl:ml-8">
             <h3 class="text-2xl font-semibold mt-4">OptomRx</h3>
 
@@ -130,7 +130,7 @@
         <!-- ODINBOOK -->
         <article class="mt-16 flex flex-col xl:flex-row">
           <img src="./src/assets/images/odinbook-small.png" alt="odinbook web app profile page"
-            class="shadow-md rounded-lg xl:max-w-2xl">
+            class="shadow-md rounded-lg xl:max-w-2xl xl:max-h-[389px]">
           <div class="xl:flex xl:flex-col xl:ml-8">
             <h3 class="text-2xl font-semibold mt-4">Odinbook</h3>
 
