--- a/index.html
+++ b/index.html
@@ -326,9 +326,7 @@
           <h3 class="font-light uppercase text-sm md:text-base border-b mb-3 md:mb-4 w-32">General</h3>
           <ul class="flex gap-x-6 md:gap-x-8">
             <li class="flex flex-col items-center justify-center w-12 h-16">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 97 97"
-                enable-background="new 0 0 97 97" xml:space="preserve" class="w-8 h-8" aria-hidden="true">
+              <svg id="Layer_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 97 97" xml:space="preserve" class="w-8 h-8" aria-hidden="true">
                 <g>
                   <path fill="#F05133" d="M92.71,44.408L52.591,4.291c-2.31-2.311-6.057-2.311-8.369,0l-8.33,8.332L46.459,23.19
                       c2.456-0.83,5.272-0.273,7.229,1.685c1.969,1.97,2.521,4.81,1.67,7.275l10.186,10.185c2.465-0.85,5.307-0.3,7.275,1.671
@@ -370,14 +368,14 @@
           <label for="name" class="mb-5 w-full max-w-sm">
             Name
             <span class="text-red-600">*</span>
-            <input
+            <input id="name"
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
               type="text" required name="name">
           </label>
           <label for="email" class="mb-5 w-full max-w-sm">
             Email
             <span class="text-red-600">*</span>
-            <input
+            <input id="email"
               class="w-full mt-2 border rounded-md border-gray-300 py-2 px-3 focus:outline-none focus:ring ring-transparent ring-offset-2 ring-offset-slate-400/30 focus:border-gray-500 shadow-sm"
               type="email" required name="email">
           </label>
