Clean up comments and HTML formatting

--- a/index.html
+++ b/index.html
@@ -124,7 +124,6 @@
                 website</a>
             </div>
           </div>
-
         </article>
 
         <!-- ODINBOOK -->
@@ -136,7 +135,8 @@
 
             <!-- Tech stack -->
             <div class="mb-4">
-              <p class="text-sm text-gray-600 mt-1 italic md:text-base">React, Tailwind, Node.js, Express, MongoDB</p>
+              <p class="text-sm text-gray-600 mt-1 italic md:text-base">React, Tailwind, Node.js, Express, MongoDB, Jest
+              </p>
             </div>
 
             <!-- Description -->
@@ -145,7 +145,6 @@
               comments, and grow your friend network. Key features include image uploads, log in with Facebook,
               responsive
               design, and AI-assisted accessiblity.</p>
-
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-5">
@@ -157,13 +156,10 @@
             <p class="text-gray-700 text-sm mb-2">*Odinbook is hosted on Heroku, so please allow up to 30 seconds for
               the live website to load.</p>
           </div>
-
         </article>
-
       </section>
 
       <!-- ABOUT section -->
-      <!-- If issues with SVG flashing on load continue, add explicit height/width properties to the SVG tag itself -->
       <section id="skills" class="w-full flex flex-col lg:mb-12">
         <h2 class="font-semibold text-3xl md:text-4xl text-gray-800 mb-6 mt-[86px]">
           Skills
@@ -435,7 +431,6 @@
             message</button>
         </form>
       </section>
-
     </main>
 
     <footer role="contentinfo" class="py-7 w-full border-t flex items-center justify-between">
