Add height/width attributes to images to avoid CLS

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <!-- OPTOMRX -->
         <article class="flex flex-col xl:flex-row">
-          <img src="./src/assets/images/optomrx.webp" alt="optomrx web app dashboard"
+          <img src="./src/assets/images/optomrx.webp" height="869" width="1500" alt="optomrx web app dashboard"
             class="shadow-md rounded-lg xl:max-w-2xl xl:max-h-[389px]">
           <div class="xl:flex xl:flex-col xl:ml-8">
             <h3 class="text-2xl font-semibold mt-4">OptomRx</h3>
@@ -128,7 +128,7 @@
 
         <!-- ODINBOOK -->
         <article class="mt-16 flex flex-col xl:flex-row">
-          <img src="./src/assets/images/odinbook.webp" alt="odinbook web app profile page"
+          <img src="./src/assets/images/odinbook.webp" height="869" width="1500" alt="odinbook web app profile page"
             class="shadow-md rounded-lg xl:max-w-2xl xl:max-h-[389px]">
           <div class="xl:flex xl:flex-col xl:ml-8">
             <h3 class="text-2xl font-semibold mt-4">Odinbook</h3>
