Set ProLog section anchor hrefs to correct targets

--- a/index.html
+++ b/index.html
@@ -181,10 +181,12 @@
 
             <!-- Project links -->
             <div class="flex items-center justify-start mb-2">
-              <a class="text-lg underline hover:no-underline mr-5" href="https://github.com/daniel-moderiano/optom-rx"
-                target="_blank" rel="noopener noreferrer" aria-label="View code for OptomRx">View code</a>
-              <a class="text-lg underline hover:no-underline" href="https://optomrx.net/" target="_blank"
-                rel="noopener noreferrer" aria-label="Visit OptomRx website">Visit
+              <a class="text-lg underline hover:no-underline mr-5"
+                href="https://github.com/profydev/prolog-app-daniel-moderiano" target="_blank" rel="noopener noreferrer"
+                aria-label="View code for OptomRx">View code</a>
+              <a class="text-lg underline hover:no-underline"
+                href="https://prolog-app-daniel-moderiano.vercel.app/dashboard" target="_blank"
+                rel="noopener noreferrer" aria-label="Visit ProLog website">Visit
                 website</a>
             </div>
           </div>
