Adjust RJS link to target_blank for consistency with other links

--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 
             <!-- Description -->
             <p class="mb-4">ProLOG (an error tracking tool) is the application/codebase of the
-              <a class="underline hover:no-underline" href="https://profy.dev/">React Job Simulator program</a>. This
+              <a class="underline hover:no-underline" target="_blank" rel="noopener noreferrer"
+                href="https://profy.dev/">React Job Simulator program</a>. This
               program involved building features and fixing bugs in the ProLog codebase, using advanced workflow with
               ESLint, Prettier, TypeScript, Husky, CI with GitHub Actions, and Trunk-Based Development with Pull
               Requests as Git workflow. New features were based on Kanban tasks and Figma designs.
