Prolog project entry (#3)
* Add ProLog entry including image and descriptive text

* Set ProLog section anchor hrefs to correct targets

* Adjust RJS link to target_blank for consistency with other links

--- a/index.html
+++ b/index.html
@@ -153,8 +153,43 @@
               <a class="text-lg underline hover:no-underline" href="https://odinbook-dm.herokuapp.com/" target="_blank"
                 rel="noopener noreferrer" aria-label="Visit Odinbook website">Visit website*</a>
             </div>
-            <p class="text-gray-700 text-sm mb-2">*Odinbook is hosted on Heroku, so please allow up to 30 seconds for
+            <p class="text-gray-700 text-sm mb-6">*Odinbook is hosted on Heroku, so please allow up to 30 seconds for
               the live website to load.</p>
+          </div>
+        </article>
+
+        <!-- PROLOG -->
+        <article class="flex flex-col xl:flex-row mt-16">
+          <img src="./src/assets/images/prolog.webp" height="869" width="1500" alt="prolog web app projects page"
+            class="shadow-md rounded-lg xl:max-w-2xl xl:max-h-[389px]">
+          <div class="xl:flex xl:flex-col xl:ml-8">
+            <h3 class="text-2xl font-semibold mt-4">ProLOG</h3>
+
+            <!-- Tech stack -->
+            <div class="mb-4">
+              <p class="text-sm text-gray-600 mt-1 italic md:text-base">React, TypeScript, Next.js, Styled Components,
+                Storybook, Cypress</p>
+            </div>
+
+            <!-- Description -->
+            <p class="mb-4">ProLOG (an error tracking tool) is the application/codebase of the
+              <a class="underline hover:no-underline" target="_blank" rel="noopener noreferrer"
+                href="https://profy.dev/">React Job Simulator program</a>. This
+              program involved building features and fixing bugs in the ProLog codebase, using advanced workflow with
+              ESLint, Prettier, TypeScript, Husky, CI with GitHub Actions, and Trunk-Based Development with Pull
+              Requests as Git workflow. New features were based on Kanban tasks and Figma designs.
+            </p>
+
+            <!-- Project links -->
+            <div class="flex items-center justify-start mb-2">
+              <a class="text-lg underline hover:no-underline mr-5"
+                href="https://github.com/profydev/prolog-app-daniel-moderiano" target="_blank" rel="noopener noreferrer"
+                aria-label="View code for OptomRx">View code</a>
+              <a class="text-lg underline hover:no-underline"
+                href="https://prolog-app-daniel-moderiano.vercel.app/dashboard" target="_blank"
+                rel="noopener noreferrer" aria-label="Visit ProLog website">Visit
+                website</a>
+            </div>
           </div>
         </article>
       </section>
