Update Odinbook listing

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
               <!-- Tech stack -->
               <div class="mb-4">
                 <p class="text-sm text-gray-600 mt-1 italic md:text-base">
-                  React, Tailwind, Node.js, Express, MongoDB, Jest
+                  React, Tailwind, Node.js, Express, MongoDB, Jest, AWS
                 </p>
               </div>
 
@@ -232,7 +232,8 @@
                 Odinbook is a Facebook-esque social media website with the
                 ability to create profiles, make posts and comments, and grow
                 your friend network. Key features include image uploads, log in
-                with Facebook, responsive design, and AI-assisted accessiblity.
+                with Facebook, responsive design, AWS deployment, and
+                AI-assisted accessiblity.
               </p>
 
               <!-- Project links -->
@@ -247,17 +248,13 @@
                 >
                 <a
                   class="text-lg underline hover:no-underline"
-                  href="https://odinbook-dm.herokuapp.com/"
+                  href="https://odinbook.com/"
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="Visit Odinbook website"
                   >Visit website*</a
                 >
               </div>
-              <p class="text-gray-700 text-sm mb-6">
-                *Odinbook is hosted on Heroku, so please allow up to 30 seconds
-                for the live website to load.
-              </p>
             </div>
           </article>
 
