Remove wensite link asterisk

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   target="_blank"
                   rel="noopener noreferrer"
                   aria-label="Visit Odinbook website"
-                  >Visit website*</a
+                  >Visit website</a
                 >
               </div>
             </div>
